# cuspatial_benchmark_nyctaxi

./: README.md
aarch64/cpp/: CMakeLists.txt  CMakeLists.xlsx
conda/environments/: cuspatial_dev_cuda10.0.yml  cuspatial_dev_cuda10.1.yml  cuspatial_dev_cuda10.2.yml  cuspatial_dev_cuda11.0.yml
cpp/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  spatial_join_geo_utility.cpp  spatial_join_geo_utility.hpp  spatial_join_nyctaxi_test.cu  spatial_join_nyctaxi_verify.cpp  spatial_join_test_utility.cpp  spatial_join_test_utility.cu  spatial_join_test_utility.hpp  spatial_join_toy_test.cu
cpp/tests/indexing/: point_quadtree_toy_debug.cu  point_quadtree_toy_output.txt
cpp/tests/join/: spatial_join_geo_utility.cpp  spatial_join_nyctaxi_test.cu  spatial_join_nyctaxi_verify.cpp  spatial_join_test_utility.cpp  spatial_join_test_utility.cu  spatial_join_test_utility.cuh  spatial_join_toy_test.cu  spatial_join_toy_verify.cpp
java/: README.md  TestHarversine.java  TestHaversine.java  pom.xml
java/src/main/java/: TestHaversine.java
java/src/test/ai/rapids/cuspatial_benchmark/: TestHaversine.java
python/: compare_hausdorff_ppl.py  gen_quadtree.py  gen_quadtree_toy.py  spatial_join.py  spatial_join_toy.py  spatial_join_verify.py  test_hausdorff_OOM.py  test_hausdorff_toy.py  test_haversine.py  traj_parquet2shp.py  traj_toy.py
